--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.11",
+    "@types/react-dom": "^19.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "typescript": "^5.8.2",
+    "web-vitals": "^2.1.0",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.29",
+    "autoprefixer": "^10.4.15"
   },
   "scripts": {
     "start": "react-scripts start",
